Bug 286768 - Problem resetting default wallet in KDEWalletmanager if I have more wallets
Summary: Problem resetting default wallet in KDEWalletmanager if I have more wallets
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-16 10:04 UTC by Pal Körössy
Modified: 2013-02-19 00:47 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments
dropdown box in Kwalletmanager settings with the wrong content (57.44 KB, image/png)
2011-11-16 10:04 UTC, Pal Körössy
Details
the three wallets (13.09 KB, image/png)
2011-11-16 10:05 UTC, Pal Körössy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pal Körössy 2011-11-16 10:04:25 UTC
Created attachment 65742 [details]
dropdown box in Kwalletmanager settings with the wrong content

Version:           unspecified (using KDE 4.7.3) 
OS:                Linux

I have three different wallets ('kdewallet', 'Wallet2', 'Wallet3') and I can set the default wallet for KDE apps in Settings/Configure_wallet/Default_wallet section of KWalletmanager. If I change the default wallet from 'kdewallet' to 'Wallet3', next time I cannot scwitch back to 'kdewallet', I can see 'Wallet3' twice in the dropdown box and no 'kdewallet' any more (see the attached two screenshots). I can switch back to kdewallet as default wallet by manually editing the kwalletrc file.

Reproducible: Always

Steps to Reproduce:
Create three different wallets. Set the default wallet for KDE apps in Settings/Configure_wallet/Default wallet of KWalletmanager from 'kdewallet'  to 'Wallet3'. 

Actual Results:  
In the dropdown box in Settings/Configure_wallet/Default_wallet of KWalletmanager can bee seen the foolowing three wallets 'Wallet3'  'Wallet2' 'Wallet3' ('kdewallet' cannot be chosen any more) in the dropdown box. See the attached two screenshots. 

Expected Results:  
'kdewallet' should be displayed in the dropdown box.
Comment 1 Pal Körössy 2011-11-16 10:05:16 UTC
Created attachment 65743 [details]
the three wallets
Comment 2 Maciej Sitarz 2013-01-07 10:42:30 UTC
I have the same symptoms and I can confirm this bug.

I prepared a fix:
Review Request #108237 (https://git.reviewboard.kde.org/r/108237/)
Comment 3 Andy Simpkins 2013-01-30 19:45:30 UTC
Bug also found in Debian Wheezy
699092: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=699092
Comment 4 Valentin Rusu 2013-02-08 22:42:46 UTC
Thanks for the patch you submitted with review 108237.
Do you have a developer account or should I submit it for you?
Comment 5 Maciej Sitarz 2013-02-09 08:31:14 UTC
Valentin please submit it for me, I think I don't have git write access.
Comment 6 Valentin Rusu 2013-02-09 14:28:58 UTC
Git commit b6fdd9227d11b81d00076101672b74120b479ee5 by Valentin Rusu.
Committed on 09/02/2013 at 15:26.
Pushed by vrusu into branch 'master'.

Applying patch submitted by Maciej Sitarz

REVIEW: 108237

M  +12   -2    konfigurator/konfigurator.cpp

http://commits.kde.org/kwallet/b6fdd9227d11b81d00076101672b74120b479ee5