Applying patch submitted by Maciej Sitarz

REVIEW: 108237
BUG: 286768